--- a/inst/extdata/icusbib-raw/icus02.bib
+++ b/inst/extdata/icusbib-raw/icus02.bib
@@ -47,7 +47,7 @@ title={Science and Philosophy}
   title = {Committee session I},
   level = {3},
   editorctype={organizer},
-  editorc = {Hintikka, Kaarlo Jaakko Juhani and Yosida, N.},
+  editorc = {Hintikka, Kaarlo Jaakko Juhani and Yoshida, Natsuhiko},
 }
 
 @InProceedings{ICUS02:C01:G01:S01,
@@ -373,7 +373,7 @@ author={Strasser, Gabor}
   title = {Committee session V},
   level = {3},
   editorctype={organizer},
-  editorc = {Rosenmayr, L. and Strasser, Gabor},
+  editorc = {Rosenmayr, Leopold and Strasser, Gabor},
 }
 
 @InProceedings{ICUS02:C02:G05:S01,
@@ -417,7 +417,7 @@ author={Suzuki, David Takayoshi}
 @InProceedings{ICUS02:C02:G06:S02,
 crossref={ICUS02},
 title={The University in Transition, (II) Currents and Whirlpools},
-author={Wold, Herman Ole Andraeas}
+author={Wold, Herman Ole Andreaas}
 }
 
 @InProceedings{ICUS02:C02:G06:S03,
