--- a/inst/extdata/icusbib-raw/icus03.bib
+++ b/inst/extdata/icusbib-raw/icus03.bib
@@ -81,7 +81,7 @@ author={Thring, Meredith Wooldridge}
 @InProceedings{ICUS03:C01:G01:S03,
 crossref={ICUS03},
 title={Science and absolute values},
-author={Szent-Gy{\"o}rgyi, Albert}
+author={{Szent-Gyorgi}, Albert}
 }
 
 @InProceedings{ICUS03:C01:G01:S04,
@@ -196,7 +196,7 @@ author={Cori, Carl Ferdinand and Halsbury, Tony and McMichael, John}
 @InProceedings{ICUS03:C01:G04:S01,
 crossref={ICUS03},
 title={Qualities of human ageing: a sociological perspective},
-author={Rosenmayr, Leopold and Rosenmayr, H.}
+author={Rosenmayr, Leopold and Rosenmayr, Hilde}
 }
 
 @InProceedings{ICUS03:C01:G04:S02,
