--- a/inst/extdata/icusbib-raw/icus04.bib
+++ b/inst/extdata/icusbib-raw/icus04.bib
@@ -7,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS04,
   title = {The Centrality of Science and Absolute Values},
   titleaddon = {The Fourth International Conference on the Unity of the Sciences},
-  editora = {Mulliken, Robert S.},
+  editora = {Mulliken, Robert Sanderson},
   editoratype = {chairperson},
   shorttitle = {ICUS IV},
   eventdate = {1975-11-27/1975-11-30},
@@ -137,7 +137,7 @@ icus.data Data Version 0.9.2
 of methodology between the social sciences and the natural sciences?},
   level = {3},
   editorctype={organizer},
-  editorc = {Russell L. Ackoff},
+  editorc = {Ackoff, Russell Lincoln},
 }
 
 @InProceedings{ICUS04:C01:G02:S01,
@@ -256,7 +256,7 @@ Copernican assumptions restricting scientific exploration},
 @InProceedings{ICUS04:C01:G03:S06,
   crossref = {ICUS04},
   title = {Neurological correlations},
-  author = {Gomes, Juan Antonio},
+  author = {Gomez, Juan Antonio},
   commentator = {{da Fonseca}, José Simões},
 }
 
@@ -855,7 +855,7 @@ Copernican assumptions restricting scientific exploration},
   crossref = {ICUS04},
   title = {Evolution - the matrix for human continuity},
   author = {Roze, Janis Arnold},
-  commentator = {Albert Szent-Gyorgi},
+  commentator = {{Szent-Gyorgi}, Albert},
 }
 
 @InProceedings{ICUS04:C04:G03:S06,
