--- a/inst/extdata/icusbib-raw/icus07.bib
+++ b/inst/extdata/icusbib-raw/icus07.bib
@@ -613,7 +613,7 @@ creative thinking.}}
   crossref = {ICUS07},
   title = {The interaction between philosophy and science},
   author = {Jammer, Max},
-  commentator = {Bartley, W. W. III},
+  commentator = {{Bartley III}, William Warren},
 }
 
 @InProceedings{ICUS07:C04:G03:S02,
@@ -704,7 +704,7 @@ creative thinking.}}
   title = {Absolute Values and Motivation},
   level = {3},
   editorctype={organizer},
-  editorc = {Jones, Reginald V.},
+  editorc = {Jones, Reginald Victor},
 }
 
 @InProceedings{ICUS07:C05:G02:S01,
