--- a/inst/extdata/icusbib-raw/icus10.bib
+++ b/inst/extdata/icusbib-raw/icus10.bib
@@ -179,7 +179,7 @@ icus.data Data Version 0.9.2
   title = {Technology and Society in Transition},
   level = {2},
   editorctype={organizer},
-  editorc = {Weinberg, Alvin M.},
+  editorc = {Weinberg, Alvin Martin},
 }
 
 @Set{ICUS10:C02:G01,
