--- a/inst/extdata/icusbib-raw/icus12.bib
+++ b/inst/extdata/icusbib-raw/icus12.bib
@@ -7,7 +7,7 @@ icus.data Data Version 0.9.2
 @Proceedings{ICUS12,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Twelfth International Conference on the Unity of the Sciences},
-  editora = {Wigner, Eugene P. and Kaplan, Morton Abraham and Weinberg, Alvin Martin},
+  editora = {Wigner, Eugene Paul and Kaplan, Morton Abraham and Weinberg, Alvin Martin},
   editoratype = {chairperson},
   shorttitle = {ICUS XII},
   eventdate = {1983-11-24/1983-11-27},
@@ -29,7 +29,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:P02,
   crossref = {ICUS12},
   title = {Moderator's Remarks},
-  author = {Sontag, Frederick},
+  author = {Sontag, Frederick Earl},
 }
 
 @InProceedings{ICUS12:P03,
@@ -76,7 +76,7 @@ icus.data Data Version 0.9.2
   title = {Unity of the Sciences},
   level = {2},
   editorctype={organizer},
-  editorc = {Wigner, Eugene P. and Radnitzky, Gerard},
+  editorc = {Wigner, Eugene Paul and Radnitzky, Gerard},
 }
 
 @set{ICUS12:C01:G01,
@@ -107,7 +107,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C01:G01:S03,
   crossref = {ICUS12},
   title = {The division of knowledge},
-  author = {Bartley, William Warren III},
+  author = {{Bartley III}, William Warren},
   commentator = {Petroni, Angelo Maria and Slade, Ivan},
 }
 
@@ -129,7 +129,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS12},
   title = {Three views concerning the unity of science},
   author = {Briskman, Laurence Barry},
-  commentator = {Koertge, Norretta},
+  commentator = {Koertge, Noretta},
 }
 
 @InProceedings{ICUS12:C01:G02:S02,
@@ -530,7 +530,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS12:C04:G03:S01,
   crossref = {ICUS12},
   title = {The study of development in the 1980s},
-  author = {Turner, Frederick Clair},
+  author = {Turner, Frederick Hodson},
   commentator = {Guetzkow, Harold Steere},
 }
 
