--- a/inst/extdata/icusbib-raw/icus13.bib
+++ b/inst/extdata/icusbib-raw/icus13.bib
@@ -646,7 +646,7 @@ icus.data Data Version 0.9.2
   title = {The Ocean in Human Affairs},
   level = {2},
   editorctype={organizer},
-  editorc = {Spilhaus, Athelstan and Singer, S. Fred},
+  editorc = {Spilhaus, Athelstan and Singer, Siegfried Fred},
 }
 
 @Set{ICUS13:C05:G01,
@@ -705,7 +705,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS13},
   title = {Ocean control of atmospheric processes},
   author = {Kraus, Eric Bradshaw},
-  commentator = {Ellsaessar, Hugh W. and Landsberg, Helmut Erich},
+  commentator = {Ellsaesser, Hugh W. and Landsberg, Helmut Erich},
 }
 
 
