--- a/inst/extdata/icusbib-raw/icus14.bib
+++ b/inst/extdata/icusbib-raw/icus14.bib
@@ -117,7 +117,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS14},
   title = {Complexity and the structure and dynamics of the genome},
   author = {Pincheira, Guido},
-  commentator = {Gomez, Juan A.},
+  commentator = {Gomez, Juan Antonio},
 }
 
 @InProceedings{ICUS14:C01:G03:S02,
