--- a/inst/extdata/icusbib-raw/icus15.bib
+++ b/inst/extdata/icusbib-raw/icus15.bib
@@ -1036,7 +1036,7 @@ icus.data Data Version 0.9.2
   title = {Global 2000 Revisited: Reassessing Man's Impact on Spaceship Earth},
   level = {2},
   editorctype={organizer},
-  editorc = {Singer, Siegfried Fred and Ellsaesser, Hugh},
+  editorc = {Singer, Siegfried Fred and Ellsaesser, Hugh W.},
 }
 
 @Set{ICUS15:C07:G01,
