--- a/inst/extdata/icusbib-raw/icus16.bib
+++ b/inst/extdata/icusbib-raw/icus16.bib
@@ -130,7 +130,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS16:C01:G04:S01,
   crossref = {ICUS16},
   title = {Organic molecules and the origin of the solar system},
-  author = {Johnson, Fred},
+  author = {Johnson, Fred M.},
   commentator={Görnitz, Thomas and {Perry Jr}, Alfred M.}
 }
 
@@ -386,7 +386,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS16},
   title = {Radhakrishnan and his universal synthesis: a critical analysis},
   author = {Gupta, Bina},
-  commentator = {Sivaraman, Krishna},
+  commentator = {Sivaraman, K. N.},
 }
 
 
