--- a/inst/extdata/icusbib-raw/icus19.bib
+++ b/inst/extdata/icusbib-raw/icus19.bib
@@ -294,7 +294,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS19:C02:G03:S02,
   crossref = {ICUS19},
   title = {Caregiving: empowerment for community problem solving},
-  author = {Sotomayer, Marta},
+  author = {Sotomayor, Marta},
   commentator = {Torre, Armando de la}
 }
 
@@ -996,7 +996,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS19},
   title = {Values in the treaty on European Union},
   author = {Vibert, Frank},
-  commentator = {Bernholz, Peter and Petroni, Angelo M.}
+  commentator = {Bernholz, Peter and Petroni, Angelo Maria}
 }
 
 @InProceedings{ICUS19:C06:G06:S02,
