--- a/inst/extdata/icusbib-raw/icus20.bib
+++ b/inst/extdata/icusbib-raw/icus20.bib
@@ -215,7 +215,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS20},
   title = {Unificationism and social thought: a complex systems perspective},
   author = {Turfus, Colin},
-  commentator = {Smart, Roderick Ninian and Kim, Yong-suk}
+  commentator = {Smart, Roderick Ninian and Kim, Yong-Suk}
 }
 
 
@@ -374,7 +374,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS20:C02:G06:S01,
   crossref = {ICUS20},
   title = {Public policy issues: genetic knowledge and its use},
-  author = {Blank, Robert},
+  author = {Blank, Robert H.},
   commentator = {Phlegar, Theodore Curtis}
 }
 
