--- a/inst/extdata/icusbib-raw/icus21.bib
+++ b/inst/extdata/icusbib-raw/icus21.bib
@@ -427,7 +427,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS21:C02:G07:X01,
   crossref = {ICUS21},
   title = {General discussants},
-  author = {Atalay, Michael and Fisher, David and Hitotsumatsu, Shin and
+  author = {Atalay, Michael K. and Fisher, David and Hitotsumatsu, Shin and
   Motz, Lloyd and Sauder, Deborah G. and {Shea Jr}, John J. and
   Tanner, Neil and Ustay, Ali H.},
   authoran = {Commentator}
@@ -1199,7 +1199,7 @@ icus.data Data Version 0.9.2
   title = {Constructing Theories for a Coming Age of Global Family},
   level = {2},
   editorctype={organizer},
-  editorc = {Jin, Sung-Bae and Burr, Ronald},
+  editorc = {Jin, Sung Bae and Burr, Ronald},
 }
 
 @Set{ICUS21:C07:G01,
