--- a/inst/extdata/icusbib-raw/icus22.bib
+++ b/inst/extdata/icusbib-raw/icus22.bib
@@ -632,7 +632,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS22:C05:G02:S02,
   crossref = {ICUS22},
   title = {Dynamic processes during disk accretion into the black hole},
-  author = {{Bisnovatyi-Kogan}, Guennadi S.},
+  author = {{Bisnovatyi-Kogan}, Guennadi Semenovich},
 }
 
 
