--- a/inst/extdata/icusbib-raw/icus05.bib
+++ b/inst/extdata/icusbib-raw/icus05.bib
@@ -525,6 +525,6 @@ icus.data Data Version 0.9.2
   crossref = {ICUS05},
   title = {The mechanism of knowledge: limits to prediction},
   author = {Pringle, John William Sutton},
-  commentator = {Josephson, Brian},
+  commentator = {Josephson, Brian D.},
 }
 
