--- a/inst/extdata/icusbib-raw/icus11.bib
+++ b/inst/extdata/icusbib-raw/icus11.bib
@@ -558,7 +558,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS11:C05:G02:S03,
   crossref = {ICUS11},
   title = {Panel discussion},
-  author = {Reynolds, Peter and Holloway, Ralph L. and
+  author = {Reynolds, Peter C. and Holloway, Ralph L. and
   Cohen, Mark Nathan and Hess, Jörg and Shepher, Joseph and Scarr, Sandra Wood},
 }
 
