--- a/inst/extdata/icusbib-raw/icus17.bib
+++ b/inst/extdata/icusbib-raw/icus17.bib
@@ -462,7 +462,7 @@ icus.data Data Version 0.9.2
 @InProceedings{ICUS17:C03:G01:S02,
   crossref = {ICUS17},
   title = {The geographical unification of the sciences: strengthening the scientific infrastructure in the developing countries},
-  author = {Moravcsik, M. J.},
+  author = {Moravcsik, Michael J.},
   commentator={Latorre, Victor},
 }
 
@@ -541,7 +541,7 @@ icus.data Data Version 0.9.2
   crossref = {ICUS17},
   title = {Drug policy, medicine and social development},
   author = {Islam, Nurul},
-  commentator={{Otero Ruiz}, Efrain},
+  commentator={{Otero Ruiz}, Efraim},
 }
 
 
